# gradx

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  python-publish.yml
gradx/: Tensor.py
tests/: test_tensor.py
