[project]
name = "gradx"
description = "Soon to be deep learning library."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENCE", name = "LICENCE"}
keywords = ["gradx", "Tensor"]
authors = [
    {name = "Mridul Sharma", email = "mridulsharma3301@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Licence :: MIT",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "numpy"
]
dynamic = ["version"]  # dynamic version via setuptools_scm

[project.urls]
Repository = "https://github.com/mridul3301/gradx"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
nuild-backend = "setuptools.build_meta"


[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["gradx"]

[tool.setuptools_scm] # same as use_scm_version=True in setup.py

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "ruff",
]

setup = [
    "build",
    "setuptools",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-l", "--color=yes", "--code-highlight=yes"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)
'''

[tool.ruff]
target-version = "py310"
fixable = ["ALL"]

select = [
    "B", # bugbear
    "C", # complexity
    "C4", # flake8-comprehensions
    "COM818", # Trailing comma on bare tuple prohibited
    "E", # pycodestyle
    "F", # pyflakes/autoflake
    "G", # flake8-logging-format
    "I", # isort
    "ISC001", # Implicitly concatenated string literals on one License
    "N",
    "PERF", # Perflint rules
    "PGH004", # Use specific rule codes when using noqa
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "PTH", # Use pathlib
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", #flake8-simplify
    "T100", # leftover breakpoint()
    "T20", # leftover print()
    "TRY004", # Prefer TypeError exception for invalid type
    "TRY200", # Use raise from to specify exception cause
    "TRY302", # Remove exception handler; error is immediately re-raised
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]

ignore = [
    "ANN", # flake8-annotations
    "E501", # line too long
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
]

[tool.ruff.per-file-ignores]
"tests/test_tensor.py" = ["S101", "T201"]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = [
    "gradx",
]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 25